--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         <meta charset="utf-8">
         <meta rel="canonical" href="#">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css"> -->
@@ -82,12 +83,12 @@
                     <div class="card p-5 mt-5">
                         <div class="card-body">
                             <p>The capacity and willingness to develop, organize and manage a business venture along
-                                with any of its risks in order to make a profit is what distinguishes businessman from
+                                with any of its risks in  to make a profit is what distinguishes businessman from
                                 an entrepreneur. E-Cell, NIT Silchar or Entrepreneurship Cell of National Institute of
                                 Technology, Silchar is a non-profit organization run by the students of NIT Silchar
                                 established with the aim to promote entrepreneurship and start-ups within the
-                                college. In a world where every man is a company himself by the virtue of his ideas, we
-                                thrive to develop the attitude of self-dependency among our college students. Keeping
+                                . In a world where every man is a company himself by the virtue of his ideas, we
+                                thrive to develop the attitude of self-dependency among our  students. Keeping
                                 an aim of fostering nurturing the spirit of entrepreneurship in the youth of NIT Silchar,
                                 we at E-Cell, NIT Silchar have conceptualized & successfully implemented various initiatives
                                 to help students, young entrepreneurs & professionals in their entrepreneurial journey.
@@ -123,7 +124,7 @@
                         </div>
                         <div class="collapse" id="guest" data-parent="#accordion">
                             <div class="card-body">
-                                <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
+                                <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the , was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this , pioneering cross-cultural culinary connections.</p>
                             </div>
                         </div>
                     </div>
@@ -211,7 +212,7 @@
                             <div class="card-body">
                                 <p class="d-none d-sm-block">Do you know the names of all the Unicorn
                                     companies that are start-ups? Or is business
-                                    trivia always on your browser history?
+                                    trivia always on your browser ?
                                     Or are you simply one of those people who love
                                     connecting dots between random clues?
                                     If yes, then SRiJaN 1.0 "Business Quiz" is just the
@@ -235,7 +236,7 @@
                                     Then you’ve come to the right place.
                                     Welcome to the IPL Auction, an event under the
                                     E-Summit 2019: Srijan1.0 where you can put
-                                    yourself in the shoes of a bidder to build your
+                                    yourself in the  of a bidder to build your
                                     dream team from scratch to lift the IPL trophy with.</p>
                             </div>
                         </div>
@@ -316,10 +317,10 @@
                      <div class="card">
                         <div class="card-header" role="tab" id="wolfhead">
                             <h3 class="mb-0">
-                                <a class="collapsed" data-toggle="collapse" data-target="#wolf"><small>Wolf of the wall street</small></a>
+                                <a class="collapsed" data-toggle="collapse" data-target="#"><small> of the wall </small></a>
                             </h3> 
                         </div>
-                        <div class="collapse" id="wolf" data-parent="#accordi">
+                        <div class="collapse" id="" data-parent="#accordi">
                             <div class="card-body">
                                 <p class="d-none d-sm-block">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.</p>
                             </div>
